// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`characterization: 八字 > 乙木女命 1`] = `
{
  "五行": {
    "土": 5.1,
    "木": 1.3,
    "水": 1.2000000000000002,
    "火": 3.8,
    "金": 0.6,
  },
  "十神": [
    "正印@年柱",
    "比肩@月柱",
    "七殺@時柱",
    "傷官(hidden)@年柱",
    "食神(hidden)@月柱",
    "劫財(hidden)@日柱",
    "食神(hidden)@時柱",
  ],
  "喜用神": {
    "喜": [
      "火",
    ],
    "忌": [
      "水",
      "木",
    ],
    "用": [
      "土",
      "金",
    ],
  },
  "四柱": {
    "年": "乙丑",
    "日": "丙午",
    "時": "壬辰",
    "月": "丙戌",
  },
  "大運前4": [
    "2歲(1986) 丁亥",
    "12歲(1996) 戊子",
    "22歲(2006) 己丑",
    "32歲(2016) 庚寅",
  ],
  "定量強弱": "偏弱/-39",
  "強弱": "偏弱",
  "日主": "丙",
  "格局": "output",
}
`;

exports[`characterization: 八字 > 早子時-0時 1`] = `
{
  "五行": {
    "土": 2.3,
    "木": 2,
    "水": 5,
    "火": 2.7,
    "金": 0,
  },
  "十神": [
    "劫財@年柱",
    "偏印@月柱",
    "偏財@時柱",
    "正官(hidden)@年柱",
    "正財(hidden)@月柱",
    "正印(hidden)@日柱",
    "正財(hidden)@時柱",
  ],
  "喜用神": {
    "喜": [
      "木",
    ],
    "忌": [
      "土",
      "火",
    ],
    "用": [
      "火",
      "金",
    ],
  },
  "四柱": {
    "年": "己卯",
    "日": "戊午",
    "時": "壬子",
    "月": "丙子",
  },
  "大運前4": [
    "9歲(2008) 乙亥",
    "19歲(2018) 甲戌",
    "29歲(2028) 癸酉",
    "39歲(2038) 壬申",
  ],
  "定量強弱": "身弱/-148",
  "強弱": "身弱",
  "日主": "戊",
  "格局": "wealth",
}
`;

exports[`characterization: 八字 > 晚子時-23時 1`] = `
{
  "五行": {
    "土": 2.3,
    "木": 2,
    "水": 5,
    "火": 2.7,
    "金": 0,
  },
  "十神": [
    "劫財@年柱",
    "偏印@月柱",
    "偏財@時柱",
    "正官(hidden)@年柱",
    "正財(hidden)@月柱",
    "正印(hidden)@日柱",
    "正財(hidden)@時柱",
  ],
  "喜用神": {
    "喜": [
      "木",
    ],
    "忌": [
      "土",
      "火",
    ],
    "用": [
      "火",
      "金",
    ],
  },
  "四柱": {
    "年": "己卯",
    "日": "戊午",
    "時": "壬子",
    "月": "丙子",
  },
  "大運前4": [
    "10歲(2009) 乙亥",
    "20歲(2019) 甲戌",
    "30歲(2029) 癸酉",
    "40歲(2039) 壬申",
  ],
  "定量強弱": "身弱/-148",
  "強弱": "身弱",
  "日主": "戊",
  "格局": "wealth",
}
`;

exports[`characterization: 八字 > 普通女命-無經度 1`] = `
{
  "五行": {
    "土": 9.1,
    "木": 0.4,
    "水": 0.1,
    "火": 2.1,
    "金": 0.3,
  },
  "十神": [
    "比肩@年柱",
    "比肩@月柱",
    "劫財@時柱",
    "比肩(hidden)@年柱",
    "正印(hidden)@月柱",
    "比肩(hidden)@日柱",
    "劫財(hidden)@時柱",
  ],
  "喜用神": {
    "喜": [],
    "忌": [
      "木",
    ],
    "用": [
      "土",
      "火",
    ],
  },
  "四柱": {
    "年": "戊辰",
    "日": "戊戌",
    "時": "己未",
    "月": "戊午",
  },
  "大運前4": [
    "3歲(1990) 丁巳",
    "13歲(2000) 丙辰",
    "23歲(2010) 乙卯",
    "33歲(2020) 甲寅",
  ],
  "定量強弱": "旺极/289",
  "強弱": "旺极",
  "日主": "戊",
  "格局": "specialized_strong",
}
`;

exports[`characterization: 八字 > 普通男命-深圳經度 1`] = `
{
  "五行": {
    "土": 2.5,
    "木": 0.3,
    "水": 0.1,
    "火": 4.8999999999999995,
    "金": 4.199999999999999,
  },
  "十神": [
    "比肩@年柱",
    "劫財@月柱",
    "劫財@時柱",
    "正官(hidden)@年柱",
    "七殺(hidden)@月柱",
    "偏印(hidden)@日柱",
    "七殺(hidden)@時柱",
  ],
  "喜用神": {
    "喜": [
      "木",
    ],
    "忌": [
      "土",
      "金",
    ],
    "用": [
      "水",
      "火",
    ],
  },
  "四柱": {
    "年": "庚午",
    "日": "庚辰",
    "時": "辛巳",
    "月": "辛巳",
  },
  "大運前4": [
    "8歲(1997) 壬午",
    "18歲(2007) 癸未",
    "28歲(2017) 甲申",
    "38歲(2027) 乙酉",
  ],
  "定量強弱": "旺极/156",
  "強弱": "中和",
  "日主": "庚",
  "格局": "specialized_strong",
}
`;

exports[`characterization: 八字 > 節氣臨界-立春前 1`] = `
{
  "五行": {
    "土": 5.899999999999999,
    "木": 1.3,
    "水": 0.5,
    "火": 1.1,
    "金": 3.1999999999999997,
  },
  "十神": [
    "七殺@年柱",
    "正印@月柱",
    "食神@時柱",
    "比肩(hidden)@年柱",
    "劫財(hidden)@月柱",
    "比肩(hidden)@日柱",
    "食神(hidden)@時柱",
  ],
  "喜用神": {
    "喜": [
      "水",
    ],
    "忌": [
      "火",
      "土",
    ],
    "用": [
      "金",
      "木",
    ],
  },
  "四柱": {
    "年": "甲辰",
    "日": "戊戌",
    "時": "庚申",
    "月": "丁丑",
  },
  "大運前4": [
    "11歲(2034) 戊寅",
    "21歲(2044) 己卯",
    "31歲(2054) 庚辰",
    "41歲(2064) 辛巳",
  ],
  "定量強弱": "偏强/61",
  "強弱": "偏强",
  "日主": "戊",
  "格局": "jianlu",
}
`;

exports[`characterization: 八字 > 紫微晚子跨年 1`] = `
{
  "五行": {
    "土": 2.6,
    "木": 0.6,
    "水": 7.8,
    "火": 0,
    "金": 1,
  },
  "十神": [
    "正印@年柱",
    "正官@月柱",
    "劫財@時柱",
    "正官(hidden)@年柱",
    "比肩(hidden)@月柱",
    "劫財(hidden)@日柱",
    "比肩(hidden)@時柱",
  ],
  "喜用神": {
    "喜": [],
    "忌": [
      "土",
    ],
    "用": [
      "水",
      "金",
    ],
  },
  "四柱": {
    "年": "庚辰",
    "日": "癸亥",
    "時": "壬子",
    "月": "戊子",
  },
  "大運前4": [
    "2歲(2001) 己丑",
    "12歲(2011) 庚寅",
    "22歲(2021) 辛卯",
    "32歲(2031) 壬辰",
  ],
  "定量強弱": "旺极/221",
  "強弱": "旺极",
  "日主": "癸",
  "格局": "jianlu",
}
`;

exports[`characterization: 八字 > 西部經度-烏魯木齊 1`] = `
{
  "五行": {
    "土": 1.4000000000000001,
    "木": 2.3,
    "水": 3,
    "火": 1.7,
    "金": 3.6,
  },
  "十神": [
    "食神@年柱",
    "傷官@月柱",
    "正官@時柱",
    "劫財(hidden)@年柱",
    "正印(hidden)@月柱",
    "偏印(hidden)@日柱",
    "偏財(hidden)@時柱",
  ],
  "喜用神": {
    "喜": [
      "水",
    ],
    "忌": [
      "土",
      "金",
    ],
    "用": [
      "木",
      "火",
    ],
  },
  "四柱": {
    "年": "乙亥",
    "日": "癸酉",
    "時": "戊午",
    "月": "甲申",
  },
  "大運前4": [
    "2歲(1996) 癸未",
    "12歲(2006) 壬午",
    "22歲(2016) 辛巳",
    "32歲(2026) 庚辰",
  ],
  "定量強弱": "身弱/-115",
  "強弱": "偏强",
  "日主": "癸",
  "格局": "seal",
}
`;

exports[`characterization: 紫微 > 乙木女命 1`] = `
{
  "十二宮": [
    "財帛戊寅:七殺",
    "子女己卯:天同",
    "夫妻庚辰:武曲",
    "兄弟辛巳:太陽",
    "命宮壬午:破軍",
    "父母癸未:天機",
    "福德甲申:紫微、天府",
    "田宅乙酉:太陰",
    "官祿丙戌:貪狼",
    "僕役丁亥:巨門",
    "遷移戊子:廉貞、天相",
    "疾厄己丑:天梁",
  ],
  "命宮": "壬午 破軍",
  "本命四化": "祿天機權天梁科紫微忌太陰",
  "身宮": "財帛",
}
`;

exports[`characterization: 紫微 > 早子時-0時 1`] = `
{
  "十二宮": [
    "福德丙寅:空",
    "田宅丁卯:天府",
    "官祿戊辰:太陰",
    "僕役己巳:廉貞、貪狼",
    "遷移庚午:巨門",
    "疾厄辛未:天相",
    "財帛壬申:天同、天梁",
    "子女癸酉:武曲、七殺",
    "夫妻甲戌:太陽",
    "兄弟乙亥:空",
    "命宮丙子:天機",
    "父母丁丑:紫微、破軍",
  ],
  "命宮": "丙子 天機",
  "本命四化": "祿武曲權貪狼科天梁忌文曲",
  "身宮": "命宮",
}
`;

exports[`characterization: 紫微 > 晚子時-23時 1`] = `
{
  "十二宮": [
    "福德丙寅:空",
    "田宅丁卯:天府",
    "官祿戊辰:太陰",
    "僕役己巳:廉貞、貪狼",
    "遷移庚午:巨門",
    "疾厄辛未:天相",
    "財帛壬申:天同、天梁",
    "子女癸酉:武曲、七殺",
    "夫妻甲戌:太陽",
    "兄弟乙亥:空",
    "命宮丙子:天機",
    "父母丁丑:紫微、破軍",
  ],
  "命宮": "丙子 天機",
  "本命四化": "祿武曲權貪狼科天梁忌文曲",
  "身宮": "命宮",
}
`;

exports[`characterization: 紫微 > 普通女命-無經度 1`] = `
{
  "十二宮": [
    "官祿甲寅:天機、太陰",
    "僕役乙卯:紫微、貪狼",
    "遷移丙辰:巨門",
    "疾厄丁巳:天相",
    "財帛戊午:天梁",
    "子女己未:廉貞、七殺",
    "夫妻庚申:空",
    "兄弟辛酉:空",
    "命宮壬戌:天同",
    "父母癸亥:武曲、破軍",
    "福德甲子:太陽",
    "田宅乙丑:天府",
  ],
  "命宮": "壬戌 天同",
  "本命四化": "祿貪狼權太陰科右弼忌天機",
  "身宮": "福德",
}
`;

exports[`characterization: 紫微 > 普通男命-深圳經度 1`] = `
{
  "十二宮": [
    "福德戊寅:紫微、天府",
    "田宅己卯:太陰",
    "官祿庚辰:貪狼",
    "僕役辛巳:巨門",
    "遷移壬午:廉貞、天相",
    "疾厄癸未:天梁",
    "財帛甲申:七殺",
    "子女乙酉:天同",
    "夫妻丙戌:武曲",
    "兄弟丁亥:太陽",
    "命宮戊子:破軍",
    "父母己丑:天機",
  ],
  "命宮": "戊子 破軍",
  "本命四化": "祿太陽權武曲科太陰忌天同",
  "身宮": "夫妻",
}
`;

exports[`characterization: 紫微 > 節氣臨界-立春前 1`] = `
{
  "十二宮": [
    "子女甲寅:武曲、天相",
    "夫妻乙卯:太陽、天梁",
    "兄弟丙辰:七殺",
    "命宮丁巳:天機",
    "父母戊午:紫微",
    "福德己未:空",
    "田宅庚申:破軍",
    "官祿辛酉:空",
    "僕役壬戌:廉貞、天府",
    "遷移癸亥:太陰",
    "疾厄甲子:貪狼",
    "財帛乙丑:天同、巨門",
  ],
  "命宮": "丁巳 天機",
  "本命四化": "祿破軍權巨門科太陰忌貪狼",
  "身宮": "官祿",
}
`;

exports[`characterization: 紫微 > 紫微晚子跨年 1`] = `
{
  "十二宮": [
    "父母戊寅:紫微、天府",
    "福德己卯:太陰",
    "田宅庚辰:貪狼",
    "官祿辛巳:巨門",
    "僕役壬午:廉貞、天相",
    "遷移癸未:天梁",
    "疾厄甲申:七殺",
    "財帛乙酉:天同",
    "子女丙戌:武曲",
    "夫妻丁亥:太陽",
    "兄弟戊子:破軍",
    "命宮己丑:天機",
  ],
  "命宮": "己丑 天機",
  "本命四化": "祿太陽權武曲科太陰忌天同",
  "身宮": "命宮",
}
`;

exports[`characterization: 紫微 > 西部經度-烏魯木齊 1`] = `
{
  "十二宮": [
    "命宮戊寅:貪狼",
    "父母己卯:天機、巨門",
    "福德庚辰:紫微、天相",
    "田宅辛巳:天梁",
    "官祿壬午:七殺",
    "僕役癸未:空",
    "遷移甲申:廉貞",
    "疾厄乙酉:空",
    "財帛丙戌:破軍",
    "子女丁亥:天同",
    "夫妻戊子:武曲、天府",
    "兄弟己丑:太陽、太陰",
  ],
  "命宮": "戊寅 貪狼",
  "本命四化": "祿天機權天梁科紫微忌太陰",
  "身宮": "命宮",
}
`;
